Add semantic elements to Hero section - Index.hml

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       <!-- HERO SECTION -->
       <!-- --------------- -->
 
-      <div class="hero-section margin-LF-auto">
-        <div class="hero grid grid--2-cols align-self--center">
+      <section class="hero-section margin-LF-auto">
+        <article class="hero grid grid--2-cols align-self--center">
           <figure class="hero-img-box">
             <img
               class="hero-img"
@@ -116,7 +116,7 @@
               src="img/guros-lue/gsnyhet.svg"
             />
           </figure>
-          <div class="hero-text-box">
+          <section class="hero-text-box">
             <p class="hero-sticker">Nyhet</p>
             <h1 class="hero-heading font-size-12-1">Guros lue</h1>
             <a
@@ -125,9 +125,9 @@
             >
               Se mer
             </a>
-          </div>
-        </div>
-      </div>
+          </section>
+        </article>
+      </section>
 
       <!-- --------------- -->
       <!-- PATTERN SECTION -->
