Add semantic elements to Pattern section

--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
       <!-- --------------- -->
       <!-- PATTERN SECTION -->
       <!-- --------------- -->
-      <div class="pattern-section">
+      <section class="pattern-section">
         <h2 class="heading-pattern-section text-align--center font-size-4-8">
           Utvalgte oppskrifter
         </h2>
-        <div class="gap-3-2 grid grid--3-cols pattern--margin">
+        <section class="gap-3-2 grid grid--3-cols pattern--margin">
           <!-- 01 -->
-          <div class="pattern-card">
+          <section class="pattern-card">
             <a
               class="text-decoration-none"
               href="/pattern-page/malins-genser.html"
@@ -150,19 +150,19 @@
                   alt="woman with a knitted sweater on a boat"
                 />
               </figure>
-              <div class="pattern-card-text-box grid grid--1-col">
+              <article class="pattern-card-text-box grid grid--1-col">
                 <h3 class="pattern-card-heading">Malins genser</h3>
                 <p class="pattern-card-price">60.00 NOK</p>
 
                 <a class="add-cart" href="#">
                   <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                 </a>
-              </div>
+              </article>
             </a>
-          </div>
+          </section>
 
           <!-- 02 -->
-          <div class="pattern-card">
+          <section class="pattern-card">
             <a
               class="text-decoration-none"
               href="/pattern-page/guros-genser.html"
@@ -174,18 +174,18 @@
                   alt="Green knitted sweater"
                 />
               </figure>
-              <div class="pattern-card-text-box grid grid--1-col">
+              <article class="pattern-card-text-box grid grid--1-col">
                 <h3 class="pattern-card-heading">Guros genser</h3>
                 <p class="pattern-card-price">60.00 NOK</p>
                 <a class="add-cart" href="#">
                   <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                 </a>
-              </div>
+              </article>
             </a>
-          </div>
+          </section>
 
           <!-- 03 -->
-          <div class="pattern-card display-no-3">
+          <section class="pattern-card display-no-3">
             <a
               class="text-decoration-none"
               href="/pattern-page/fridas-genser.html"
@@ -198,20 +198,20 @@
                 />
               </figure>
 
-              <div class="pattern-card-text-box grid grid--1-col">
+              <article class="pattern-card-text-box grid grid--1-col">
                 <h3 class="pattern-card-heading">Fridas genser</h3>
                 <p class="pattern-card-price">60.00 NOK</p>
                 <a class="add-cart" href="#">
                   <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                 </a>
-              </div>
+              </article>
             </a>
-          </div>
-        </div>
+          </section>
+        </section>
         <div class="btn-light-top text-align--center font-size-2-4">
           <a href="pattern.html" class="btn-light">Se alle oppskrifter</a>
         </div>
-      </div>
+      </section>
 
       <!-- --------------- -->
       <!-- ABOUT EMMA SECTION -->
